// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`junction emission snapshot — opportunity_sales_activity (backend) emits opportunity-sales-activity.entity.ts 1`] = `
"// @generated by @pattern-stack/codegen from junctions/opportunity_sales_activity.yaml — DO NOT EDIT. Hand edits are overwritten on re-emit. Regenerate with \`bun run codegen\`. To extend, use the junction YAML.
import {
  boolean,
  numeric,
  pgTable,
  primaryKey,
  text,
  timestamp,
  uuid,
  type AnyPgColumn,
} from 'drizzle-orm/pg-core';
import { type InferSelectModel } from 'drizzle-orm';
import { opportunities } from '../opportunities/opportunity.entity';
import { sales_activities } from '../sales-activities/sales-activity.entity';

// ============================================================================
// Enums
// ============================================================================

// ============================================================================
// Table
// ============================================================================

export const opportunitySalesActivities = pgTable(
  'opportunity_sales_activities',
  {
    // FK columns — composite primary key (no surrogate id: Q4 resolution)
    opportunityId: uuid('opportunity_id').notNull().references((): AnyPgColumn => opportunities.id, { onDelete: 'restrict' }),
    salesActivityId: uuid('sales_activity_id').notNull().references((): AnyPgColumn => sales_activities.id, { onDelete: 'restrict' }),

    // BaseJunctionFields — is_primary is always emitted
    isPrimary: boolean('is_primary').notNull().default(false),

    // Temporal window (temporal: true, default)
    startedAt: timestamp('started_at'),
    endedAt: timestamp('ended_at'),

    // Provenance (sourced: true, default)
    sourcedFrom: text('sourced_from'),
    confidence: numeric('confidence', { precision: 5, scale: 4 }),
    matchedAt: timestamp('matched_at'),

    // Timestamps
    createdAt: timestamp('created_at').notNull().defaultNow(),
    updatedAt: timestamp('updated_at').notNull().defaultNow(),
  },
  (table) => [
    // Composite primary key on the two FK columns (Q4 resolution: no surrogate id)
    primaryKey({ columns: [table.opportunityId, table.salesActivityId] }),
  ],
);

export type OpportunitySalesActivity = InferSelectModel<typeof opportunitySalesActivities>;
export type OpportunitySalesActivityInsert = typeof opportunitySalesActivities.$inferInsert;
"
`;

exports[`junction emission snapshot — opportunity_sales_activity (backend) emits opportunity-sales-activity.repository.ts 1`] = `
"// @generated by @pattern-stack/codegen from junctions/opportunity_sales_activity.yaml — DO NOT EDIT. Hand edits are overwritten on re-emit. Regenerate with \`bun run codegen\`. To extend, use the junction YAML.
import { Injectable, Inject } from '@nestjs/common';
import { eq } from 'drizzle-orm';
import { DRIZZLE } from '@shared/constants/tokens';
import type { DrizzleClient } from '@shared/types/drizzle';
import { JunctionIntegrationRepository } from '@shared/base-classes/junction-integration-repository';
import type { JunctionIntegrationConfig } from '@shared/base-classes/junction-integration-repository';
// REL-2 (#587): the generated relation graph binds the repository's third type
// parameter. A junction table declares no scope of its own, so no hop INTO it
// carries a predicate — REL-2 §1.5 measures exactly what that does and does not
// allow, and a characterisation test pins it.
import type { Relations } from '../../generated/relations';
import { opportunities } from '../opportunities/opportunity.entity';
import { sales_activities } from '../sales-activities/sales-activity.entity';
import { opportunitySalesActivities, type OpportunitySalesActivity } from './opportunity-sales-activity.entity';

/**
 * Canonical fields a integrated opportunity_sales_activity junction write carries (#374). BOTH
 * parent FKs are named by their vendor external ids and resolved STRICTLY in
 * the tx (a missing parent throws → the orchestrator records a failed item and
 * continues). \`userId\` is run context (no column on the junction).
 */
export interface OpportunitySalesActivityIntegrationWrite {
  readonly opportunityExternalId: string;
  readonly salesActivityExternalId: string;
  readonly userId: string;
}

/**
 * Canonical-projected view of a opportunity_sales_activity junction row, keyed for the integration
 * differ (#374). \`id\` is the COMPOSITE externalId (the junction has no
 * surrogate id); the FKs are the LOCAL resolved uuids.
 */
export interface OpportunitySalesActivityIntegrationProjection {
  readonly id: string;
  readonly opportunityId: string;
  readonly salesActivityId: string;
  readonly createdAt: Date;
  readonly updatedAt: Date;
}

@Injectable()
export class OpportunitySalesActivityRepository extends JunctionIntegrationRepository<
  OpportunitySalesActivity,
  typeof opportunitySalesActivities,
  Relations,
  OpportunitySalesActivityIntegrationWrite,
  OpportunitySalesActivityIntegrationProjection
> {
  readonly table = opportunitySalesActivities;

  // Junctions track temporal validity via started_at / ended_at, NOT via
  // deleted_at. is_primary flips replace soft-delete semantics (Q5 resolution).
  protected override readonly behaviors = {
    timestamps: true,
    softDelete: false,
    userTracking: false,
    // Junction tables are not tenant-scopable in v1 (ADR-042 / TEN-1 §11):
    // \`JunctionDefinitionSchema\` is \`.strict()\` and declares no such key.
    tenantScoped: false,
  };

  // Inbound-integration write surface (#374). Both endpoints resolve strictly against
  // the live parent tables; role-bearing junctions conflict on (left,right,role).
  protected readonly integrationConfig: JunctionIntegrationConfig = {
    left: { column: 'opportunityId', refTable: opportunities },
    right: { column: 'salesActivityId', refTable: sales_activities },
    roleColumn: null,
  };

  constructor(@Inject(DRIZZLE) db: DrizzleClient<Relations>) {
    super(db);
  }

  // ═══════════════════════════════════════════════════════════════════════════
  // Pairing-aware finders — hardcoded in v1 (Q2 resolution: no declarative
  // queries block on junctions; every junction needs exactly these two methods).
  // ═══════════════════════════════════════════════════════════════════════════

  /**
   * Fetch all junction rows where opportunity_id matches.
   *
   * Pagination shape: { cursor?, limit? } — canonical per cgp-62 r4.
   * FIXME: align with codegen-patterns#358 pagination shape if it diverges.
   */
  async findByOpportunityId(
    opportunityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunitySalesActivity[]> {
    const rows = await this.baseQuery(eq(this.table.opportunityId, opportunityId))
      .limit(opts?.limit ?? 100);
    return rows as OpportunitySalesActivity[];
  }

  /**
   * Fetch all junction rows where sales_activity_id matches.
   *
   * Pagination shape: { cursor?, limit? } — canonical per cgp-62 r4.
   * FIXME: align with codegen-patterns#358 pagination shape if it diverges.
   */
  async findBySalesActivityId(
    salesActivityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunitySalesActivity[]> {
    const rows = await this.baseQuery(eq(this.table.salesActivityId, salesActivityId))
      .limit(opts?.limit ?? 100);
    return rows as OpportunitySalesActivity[];
  }

  // Inherited from JunctionIntegrationRepository (+ BaseRepository):
  //   findById, findByIds, list, count, exists, create, update, delete, upsertMany
  //   integrationUpsertOne, findByExternalIdProjected, softDeleteByExternalId
}
"
`;

exports[`junction emission snapshot — opportunity_sales_activity (backend) emits opportunity-sales-activity.service.ts 1`] = `
"// @generated by @pattern-stack/codegen from junctions/opportunity_sales_activity.yaml — DO NOT EDIT. Hand edits are overwritten on re-emit. Regenerate with \`bun run codegen\`. To extend, use the junction YAML.
import { Injectable, Inject, Optional } from '@nestjs/common';
import { WithAnalytics } from '@shared/base-classes/with-analytics';
import { EVENT_BUS } from '@shared/constants/tokens';
import { BaseService } from '@shared/base-classes/base-service';
import { OpportunitySalesActivityRepository } from './opportunity-sales-activity.repository';
import type { OpportunitySalesActivity } from './opportunity-sales-activity.entity';
import { OpportunityRepository } from '../opportunities/opportunity.repository';
import type { Opportunity } from '../opportunities/opportunity.entity';
import { SalesActivityRepository } from '../sales-activities/sales-activity.repository';
import type { SalesActivity } from '../sales-activities/sales-activity.entity';

/**
 * Pick of the link-side mutable fields that callers may supply when
 * attaching. Subset of \`OpportunitySalesActivity\` minus the two FK columns
 * (those come from the method args).
 */
export type OpportunitySalesActivityLinkInput = Partial<
  Pick<OpportunitySalesActivity,
    'isPrimary' | 'startedAt' | 'endedAt' | 'sourcedFrom' | 'confidence' | 'matchedAt'
  >
>;

@Injectable()
export class OpportunitySalesActivityService extends WithAnalytics(
  BaseService<OpportunitySalesActivityRepository, OpportunitySalesActivity>,
) {
  protected override readonly entityName = 'opportunity_sales_activity';

  /** Injected by NestJS when EventsModule is registered. */
  @Optional() @Inject(EVENT_BUS)
  protected override eventBus: any = undefined;

  constructor(
    protected override readonly repository: OpportunitySalesActivityRepository,
    private readonly opportunityRepo: OpportunityRepository,
    private readonly salesActivityRepo: SalesActivityRepository,
  ) {
    super(repository);
  }

  // Pairing-aware pass-throughs — mirror the repo's two finders so use-cases
  // and #60's fan-out methods both delegate through the service layer, keeping
  // analytics/events instrumentation uniform (per relationship's service.ejs.t).

  /**
   * Fetch all junction rows for a given opportunity_id.
   */
  async findByOpportunityId(
    opportunityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunitySalesActivity[]> {
    return this.repository.findByOpportunityId(opportunityId, opts);
  }

  /**
   * Fetch all junction rows for a given sales_activity_id.
   */
  async findBySalesActivityId(
    salesActivityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunitySalesActivity[]> {
    return this.repository.findBySalesActivityId(salesActivityId, opts);
  }

  // ═══════════════════════════════════════════════════════════════════════
  // CGP-60 — canonical fan-out methods
  // Mirrored, paginated, composed \`{ entity, link }\` shape. Always emitted
  // on the junction service; parent-side \`attach<Right>\` / \`addTo<Left>\` /
  // etc. inject templates delegate here. \`list\` is implemented with two
  // single-table queries (no Drizzle \`with:\`).
  // ═══════════════════════════════════════════════════════════════════════

  /**
   * Create a junction row linking a opportunity and a sales_activity.
   * Returns the persisted row.
   *
   * **Idempotency:** NOT idempotent at the service layer in v1. A duplicate
   * pair raises the DB-level composite-PK unique-constraint error from the
   * underlying repository's \`create\`. Callers requiring idempotency should
   * either check existence via \`findByOpportunityId\` + filter,
   * or wrap the call in try/catch on the unique-violation error. A future
   * leaf may add a transactional check-then-create here if a consumer
   * surfaces the need (track as a follow-up if so).
   */
  async attach(
    opportunityId: string,
    salesActivityId: string,
    link?: OpportunitySalesActivityLinkInput,
  ): Promise<OpportunitySalesActivity> {
    return this.create({
      opportunityId: opportunityId,
      salesActivityId: salesActivityId,
      ...(link ?? {}),
    } as unknown as Partial<OpportunitySalesActivity>);
  }

  /**
   * Remove the junction row linking \`opportunityId\` and
   * \`salesActivityId\`. No-op if no row exists.
   */
  async detach(
    opportunityId: string,
    salesActivityId: string,
  ): Promise<void> {
    const links = await this.repository.findByOpportunityId(opportunityId);
    const match = links.find(
      (l) => (l as any).salesActivityId === salesActivityId,
    );
    if (match) {
      await this.delete((match as any).id ?? \`\${opportunityId}:\${salesActivityId}\`);
    }
  }

  /**
   * List the targets associated with one side of the junction, composed as
   * \`{ entity, link }\`. Implementation: one repo call for the links, one
   * \`findByIds\` call for the targets — no SQL JOIN. Cursor pagination by
   * right-entity \`id\` (matches CGP-358 has_many shape; time-ordered cursor
   * is deferred per spec Open Q3).
   */
  async listAssoc(
    side: 'left' | 'right',
    anchorId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<Array<{ entity: Opportunity | SalesActivity; link: OpportunitySalesActivity }>> {
    if (side === 'left') {
      const links = await this.repository.findByOpportunityId(anchorId, opts);
      const targetIds = links.map((l) => (l as any).salesActivityId as string);
      const targets = await this.salesActivityRepo.findByIds(targetIds);
      const byId = new Map(targets.map((t) => [(t as any).id, t]));
      return links.map((link) => ({
        entity: byId.get((link as any).salesActivityId)! as SalesActivity,
        link,
      }));
    } else {
      const links = await this.repository.findBySalesActivityId(anchorId, opts);
      const targetIds = links.map((l) => (l as any).opportunityId as string);
      const targets = await this.opportunityRepo.findByIds(targetIds);
      const byId = new Map(targets.map((t) => [(t as any).id, t]));
      return links.map((link) => ({
        entity: byId.get((link as any).opportunityId)! as Opportunity,
        link,
      }));
    }
  }

  /**
   * Mark the (\`opportunityId\`, \`salesActivityId\`) row
   * as \`is_primary: true\`. Demoting other rows on the same side is the
   * caller's concern in v1; future leaves may add transactional demotion.
   */
  async setPrimary(
    opportunityId: string,
    salesActivityId: string,
  ): Promise<void> {
    const links = await this.repository.findByOpportunityId(opportunityId);
    const match = links.find(
      (l) => (l as any).salesActivityId === salesActivityId,
    );
    if (match) {
      await this.update(
        (match as any).id ?? \`\${opportunityId}:\${salesActivityId}\`,
        { isPrimary: true } as unknown as Partial<OpportunitySalesActivity>,
      );
    }
  }

  // Inherited from BaseService:
  //   findById, findByIds, list, count, exists, create, update, delete
}
"
`;

exports[`junction emission snapshot — opportunity_sales_activity (backend) emits opportunity.service.ts (left parent — junction accessor) 1`] = `
"// @generated by @pattern-stack/codegen from entities/opportunity.yaml — DO NOT EDIT. Hand edits are overwritten on re-emit. Regenerate with \`bun run codegen\`. To extend, use a pattern (src/patterns/*.pattern.ts) or the entity YAML.
import { Injectable, Inject, Optional, forwardRef } from '@nestjs/common';
import { WithAnalytics } from '@shared/base-classes/with-analytics';
import { EVENT_BUS } from '@shared/constants/tokens';
import { IntegratedEntityService } from '@shared/base-classes/integrated-entity-service';
import { OpportunityRepository } from './opportunity.repository';
import type { Opportunity } from './opportunity.entity';
import { OpportunitySalesActivityService, OpportunitySalesActivityLinkInput } from '../opportunity-sales-activities/opportunity-sales-activity.service';
import type { OpportunitySalesActivity } from '../opportunity-sales-activities/opportunity-sales-activity.entity';
import type { SalesActivity } from '../sales-activities/sales-activity.entity';

@Injectable()
export class OpportunityService extends WithAnalytics(
  IntegratedEntityService<OpportunityRepository, Opportunity>,
) {
  protected override readonly entityName = 'opportunity';

  /** Injected by NestJS when EventsModule is registered. */
  @Optional() @Inject(EVENT_BUS)
  protected override eventBus: any = undefined;

  constructor(
    protected override readonly repository: OpportunityRepository,
  ) {
    super(repository);
  }

  // Lifecycle events (created/updated/deleted + per-field changes) are emitted
  // automatically by BaseService when the events subsystem is installed.
  //
  // Inherited from IntegratedEntityService:
  //   findById, findByIds, list, count, exists, create, update, delete
  //   findByExternalId, findManyByExternalIds

  // ═══════════════════════════════════════════════════════════════════════
  // Junction fan-out (CGP-60)
  // Delegates to each junction's service; the same association is mirrored
  // on the other parent.
  // ═══════════════════════════════════════════════════════════════════════

  // opportunity_sales_activity — left side, fan-out to SalesActivity
  @Inject(forwardRef(() => OpportunitySalesActivityService))
  private readonly opportunitySalesActivityService!: OpportunitySalesActivityService;

  async attachSalesActivity(
    opportunityId: string,
    salesActivityId: string,
    link?: OpportunitySalesActivityLinkInput,
  ): Promise<OpportunitySalesActivity> {
    return this.opportunitySalesActivityService.attach(opportunityId, salesActivityId, link);
  }

  async detachSalesActivity(
    opportunityId: string,
    salesActivityId: string,
  ): Promise<void> {
    return this.opportunitySalesActivityService.detach(opportunityId, salesActivityId);
  }

  async sales_activitiesList(
    opportunityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<Array<{ entity: SalesActivity; link: OpportunitySalesActivity }>> {
    return this.opportunitySalesActivityService.listAssoc('left', opportunityId, opts) as Promise<
      Array<{ entity: SalesActivity; link: OpportunitySalesActivity }>
    >;
  }

  async sales_activitiesSetPrimary(
    opportunityId: string,
    salesActivityId: string,
  ): Promise<void> {
    return this.opportunitySalesActivityService.setPrimary(opportunityId, salesActivityId);
  }
}
"
`;

exports[`junction emission snapshot — opportunity_sales_activity (backend) emits sales-activity.service.ts (right parent — junction accessor) 1`] = `
"// @generated by @pattern-stack/codegen from entities/sales_activity.yaml — DO NOT EDIT. Hand edits are overwritten on re-emit. Regenerate with \`bun run codegen\`. To extend, use a pattern (src/patterns/*.pattern.ts) or the entity YAML.
import { Injectable, Inject, Optional, forwardRef } from '@nestjs/common';
import { WithAnalytics } from '@shared/base-classes/with-analytics';
import { EVENT_BUS } from '@shared/constants/tokens';
import { ActivityEntityService } from '@shared/base-classes/activity-entity-service';
import { SalesActivityRepository } from './sales-activity.repository';
import type { SalesActivity } from './sales-activity.entity';
import { OpportunitySalesActivityService, OpportunitySalesActivityLinkInput } from '../opportunity-sales-activities/opportunity-sales-activity.service';
import type { OpportunitySalesActivity } from '../opportunity-sales-activities/opportunity-sales-activity.entity';
import type { Opportunity } from '../opportunities/opportunity.entity';

@Injectable()
export class SalesActivityService extends WithAnalytics(
  ActivityEntityService<SalesActivityRepository, SalesActivity>,
) {
  protected override readonly entityName = 'sales_activity';

  /** Injected by NestJS when EventsModule is registered. */
  @Optional() @Inject(EVENT_BUS)
  protected override eventBus: any = undefined;

  constructor(
    protected override readonly repository: SalesActivityRepository,
  ) {
    super(repository);
  }

  // Lifecycle events (created/updated/deleted + per-field changes) are emitted
  // automatically by BaseService when the events subsystem is installed.
  //
  // Inherited from ActivityEntityService:
  //   findById, findByIds, list, count, exists, create, update, delete
  //   findByDateRange, findByUser, findBySubject, findRecent

  // ═══════════════════════════════════════════════════════════════════════
  // Junction fan-out (CGP-60)
  // Delegates to each junction's service; the same association is mirrored
  // on the other parent.
  // ═══════════════════════════════════════════════════════════════════════

  // opportunity_sales_activity — right side, fan-out to Opportunity
  @Inject(forwardRef(() => OpportunitySalesActivityService))
  private readonly opportunitySalesActivityService!: OpportunitySalesActivityService;

  async addToOpportunity(
    salesActivityId: string,
    opportunityId: string,
    link?: OpportunitySalesActivityLinkInput,
  ): Promise<OpportunitySalesActivity> {
    return this.opportunitySalesActivityService.attach(opportunityId, salesActivityId, link);
  }

  async removeFromOpportunity(
    salesActivityId: string,
    opportunityId: string,
  ): Promise<void> {
    return this.opportunitySalesActivityService.detach(opportunityId, salesActivityId);
  }

  async opportunitiesList(
    salesActivityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<Array<{ entity: Opportunity; link: OpportunitySalesActivity }>> {
    return this.opportunitySalesActivityService.listAssoc('right', salesActivityId, opts) as Promise<
      Array<{ entity: Opportunity; link: OpportunitySalesActivity }>
    >;
  }

  async opportunitiesSetPrimary(
    salesActivityId: string,
    opportunityId: string,
  ): Promise<void> {
    return this.opportunitySalesActivityService.setPrimary(opportunityId, salesActivityId);
  }
}
"
`;
